continuada implementaçao de produtos e correçoes no crud de pessoas

--- a/src/main/resources/templates/pessoas/list.html
+++ b/src/main/resources/templates/pessoas/list.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<h1>PESSOAS</h1>
+<a href="/pessoas/form">Adicionar Nova Pessoa</a>
+
 <table class="table" border="1">
     <thead>
     <tr>
