--- a/src/main/resources/templates/pessoas/list.html
+++ b/src/main/resources/templates/pessoas/list.html
@@ -13,7 +13,7 @@
     <thead>
     <tr>
         <th>Id</th>
-        <th>Descrição</th>
+        <th>Nome</th>
     </tr>
     </thead>
     <tr th:each="p : ${pessoas}">
