correçoes pontuais em arquivos

--- a/src/main/resources/templates/pessoas/list.html
+++ b/src/main/resources/templates/pessoas/list.html
@@ -19,8 +19,8 @@
     <tr th:each="p : ${pessoas}">
         <td th:text="${p.id}"> </td>
         <td th:text="${p.nome}"> </td>
-        <td> <a th:href="@{/pessoas/edit/{id}(id=${p.id})}">Editar</a> </td>
-        <td> <a onclick="return window.confirm('Tem certeza que deseja excluir este registro?')"  th:href="@{/pessoas/remove/{id}(id=${p.id})}">Excluir</a> </td>
+        <td> <a th:href="@{/pessoas/edit/{id}(id=${p.id})}">&#128221;</a> </td>
+        <td> <a onclick="return window.confirm('Tem certeza que deseja excluir este registro?')"  th:href="@{/pessoas/remove/{id}(id=${p.id})}">&#10060;</a> </td>
     </tr>
 </table>
 
