--- a/src/main/resources/templates/produtos/form.html
+++ b/src/main/resources/templates/produtos/form.html
@@ -12,6 +12,7 @@
 <form th:action="${produto.id == null} ? @{/produtos/save} : @{/produtos/update}" th:object="${produto}" method="post">
     <input type="hidden" th:field="*{id}">
     <input type="text" th:field="*{descricao}"  placeholder="Descriçao">
+    <input type="text" th:field="*{valor}"  placeholder="Valor">
     <input type="submit" value="Enviar">
 </form>
 
